# cursor-cellphone

./: .gitignore  AGENTS.md  Pasted code (1).py  Pasted code (2) (1).py  README.md  pyproject.toml
docs/: failure_modes.md
examples/: command.example.json  event.example.json  handoff.example.json  response.example.json
src/agent_cellphone/: __init__.py  __main__.py  cli.py  errors.py
src/agent_cellphone/contracts/: event.py  handoff.py  message.py  response.py
src/agent_cellphone/runtime/: event_log.py  handoff_router.py  receive_loop.py  send_loop.py  status.py
src/agent_cellphone/storage/: artifact_store.py  file_layout.py
src/agent_cellphone/transport/: base.py  cursor_adapter.py
tests/smoke/: test_failure_visibility.py  test_handoff.py  test_send_receive.py
